Changed background-size to "cover" to eliminate the annoying clipping of the background by the top margin. This also required increasing the height of the parallax container to prevent some of the bottom or top of the images from never being visible.

--- a/style.css
+++ b/style.css
@@ -14,19 +14,21 @@ h1 {
   font-family: "Seaweed Script", cursive;
 }
 
+/* Not used in parallax version*/
+/*
 img {
   width: 94%;
   margin: 3%;
 }
 
-.photo {
+ .photo {
   width: 250px;
   border-style: solid;
   border-width: 1px;
   border-color: #ddd;
   box-shadow: 5px 5px #999;
   margin: 1% 3%;
-}
+} */
 
 .caption {
   position: absolute;
@@ -56,11 +58,11 @@ img {
 .parallax {
   position: relative;
   /* Set a specific height */
-  height: 500px;
+  height: 100vh;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
 }
